--- a/report/sections/B1.tex
+++ b/report/sections/B1.tex
@@ -28,6 +28,6 @@ In \cref{fig:gp:loglog} we show 500 samples from $p(\theta|\mathcal{D})$ from ea
     \label{fig:gp:analysis}
 \end{figure}
 \begin{figure}[H]
-    \includegraphics[width=0.49\textwidth]{figures/gp/p(f*|x*,D).pdf}
+    \includegraphics[width=0.49\textwidth]{figures/gp/plot.pdf}
     \caption{Plot of $p(f^*|x^*,\mathcal{D})$ along with its mean and confidence interval}
 \end{figure}
