remove default = True
Signed-off-by: pants007 <qrw992@alumni.ku.dk>

--- a/scripts/b.ipynb
+++ b/scripts/b.ipynb
@@ -80,9 +80,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_gpr(X,y, default = True, kernel = None, prior_dict = None):\n",
+    "def make_gpr(X,y, kernel = None, prior_dict = None):\n",
     "    pyro.clear_param_store()\n",
-    "    if default:\n",
+    "    if kernel is None:\n",
     "        kernel = gp.kernels.RBF(input_dim=1)\n",
     "        kernel.variance = pyro.nn.PyroSample(dist.LogNormal(0.0, 2.0))\n",
     "        kernel.lengthscale = pyro.nn.PyroSample(dist.LogNormal(-1.0, 1.0))\n",
@@ -412,7 +412,7 @@
     "plt.legend()\n",
     "slim=0.6\n",
     "plt.tight_layout(pad=-slim, w_pad=-slim, h_pad=-slim)\n",
-    "plt.savefig(gp_fig_folder + \"p(f*|x*,D).pdf\",\n",
+    "plt.savefig(gp_fig_folder + \"plot.pdf\",\n",
     "            bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
@@ -485,7 +485,7 @@
    "outputs": [],
    "source": [
     "T = 10\n",
-    "C = 4\n",
+    "C = 1\n",
     "N = 100\n",
     "W = 100"
    ]
@@ -592,7 +592,7 @@
     "    slim=0.6\n",
     "    plt.tight_layout(pad=-slim, w_pad=-slim, h_pad=-slim)\n",
     "    if save:\n",
-    "        plt.savefig(gp_fig_folder + save_prefix+\"k={}.pdf\".format(k+1), bbox_inches=\"tight\")\n",
+    "        plt.savefig(gp_fig_folder + save_prefix+\"k_{}.pdf\".format(k+1), bbox_inches=\"tight\")\n",
     "    plt.show()\n",
     "\n",
     "for k in [0, 4, 9]:\n",
