fix wrong filename
Signed-off-by: pants007 <qrw992@alumni.ku.dk>

--- a/report/sections/B2.tex
+++ b/report/sections/B2.tex
@@ -4,19 +4,19 @@ however, from running the optimization loop multiple times, we notice that we ar
 \begin{figure}[H]
     \begin{subfigure}[t]{0.49\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{figures/gp/b2-k=1.pdf}
+        \includegraphics[width=\textwidth]{figures/gp/b2-k_1.pdf}
     \end{subfigure}
     \hfill
     \begin{subfigure}[t]{0.49\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{figures/gp/b2-k=5.pdf}
+        \includegraphics[width=\textwidth]{figures/gp/b2-k_5.pdf}
     \end{subfigure}
 
     \medskip
     
     \begin{subfigure}[t]{0.49\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{figures/gp/b2-k=10.pdf}
+        \includegraphics[width=\textwidth]{figures/gp/b2-k_10.pdf}
     \end{subfigure}
     \caption{Plots from running our Bayesian optimization loop at iteration $k$}
     \label{fig:gp:bayesianloop}
