update figure placements

--- a/report/sections/A.tex
+++ b/report/sections/A.tex
@@ -1,4 +1,4 @@
-\begin{figure}[h]
+\begin{figure}%[h]
 	\begin{floatrow}
 	\captionsetup{width=.49\linewidth}
 	\ffigbox{%
@@ -58,7 +58,7 @@
 \end{floatrow}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}%[h]
 	\begin{floatrow}
 	\captionsetup{width=.49\linewidth}
 	\ffigbox{%
