update code repository description

--- a/report/sections/appendices.tex
+++ b/report/sections/appendices.tex
@@ -1,7 +1,7 @@
 
 \section{Code repository}
-The Python code used to train the models and generate the results can be found in our repository at 
-\url{https://github.com/JackismyShephard/pml-22}
+All our code can be found in the Jupyter notebooks scripts \texttt{a.ipynb} and \texttt{b.ipynb} available in the folder \texttt{scripts} in the public repository at
+\url{https://github.com/JackismyShephard/pml-22}.
 
 \section{Extra figures}
 \begin{figure}[!h]
