--- a/report/sections/appendices.tex
+++ b/report/sections/appendices.tex
@@ -1,6 +1,6 @@
 
 \section{Code repository}
-All our code can be found in the Jupyter notebooks scripts \texttt{a.ipynb} and \texttt{b.ipynb} available in the folder \texttt{scripts} in the public repository at
+All our code can be found in the Jupyter notebook scripts \texttt{a.ipynb} and \texttt{b.ipynb} available in the folder \texttt{scripts} in the public repository at
 \url{https://github.com/JackismyShephard/pml-22}.
 
 \section{Extra figures}
