--- a/report/sections/appendices.tex
+++ b/report/sections/appendices.tex
@@ -4,7 +4,7 @@ All our code can be found in the Jupyter notebook scripts \texttt{a.ipynb} and \
 \url{https://github.com/JackismyShephard/pml-22}.
 
 \section{Extra figures}
-\begin{figure}[!h]
+\begin{figure}%[!h]
 	\begin{subfigure}[t]{1\textwidth}
 		\centering
 		\includegraphics[width = 0.8\textwidth]{figures/ppca/real}
@@ -33,7 +33,7 @@ All our code can be found in the Jupyter notebook scripts \texttt{a.ipynb} and \
 	\caption{Comparison of MNIST test set images and corresponding reconstructions sampled from density models}
 \end{figure}
 
-\begin{figure}[!h]
+\begin{figure}%[!h]
 	\begin{subfigure}[t]{0.49\textwidth}
 		\centering
 		\includegraphics[width = 1\textwidth]{figures/vae/clustering}
@@ -57,7 +57,7 @@ All our code can be found in the Jupyter notebook scripts \texttt{a.ipynb} and \
 	\caption{Clustering on MNIST test (projection to latent space) using trained density models.}	
 \end{figure}
 
-\begin{figure}[!h]
+\begin{figure}%[!h]
 	\begin{subfigure}[t]{0.49\textwidth}
 		\centering
 		\includegraphics[width = 1\textwidth]{figures/vae/interpolation}
@@ -84,30 +84,30 @@ All our code can be found in the Jupyter notebook scripts \texttt{a.ipynb} and \
 
 \subsection{Bayesian optimization loop results}
 \subsubsection{Large versions of plots from the B2 section of the report}
-\begin{figure}[H]
+\begin{figure}%[H]
     \includegraphics[width=\textwidth]{figures/gp/b2-k_1.pdf}
     \caption{Result of the Bayesian optimization loop with RBF kernel at iteration $k = 1$}
 \end{figure}
-\begin{figure}[H]
+\begin{figure}%[H]
     \includegraphics[width=\textwidth]{figures/gp/b2-k_5.pdf}
     \caption{Result of the Bayesian optimization loop with RBF kernel at iteration $k = 5$}
 \end{figure}
-\begin{figure}[H]
+\begin{figure}%[H]
     \includegraphics[width=\textwidth]{figures/gp/b2-k_10.pdf}
     \caption{Result of the Bayesian optimization loop with RBF kernel at iteration $k = 10$}
 \end{figure}
 \subsubsection{Results from using other kernels than RBF}
-\begin{figure}[H]
+\begin{figure}%[H]
     \includegraphics[width=\textwidth]{figures/gp/Brownian.png}
     \caption{Result of running the Bayesian optimization loop with a Brownian kernel}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}%[H]
     \includegraphics[width=\textwidth]{figures/gp/cosine.png}
     \caption{Result of running the Bayesian optimization loop with a Cosine kernel}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}%[H]
     \includegraphics[width=\textwidth]{figures/gp/mattern.png}
     \caption{Result of running the Bayesian optimization loop with a Matern32 kernel}
 \end{figure}
