add one more thing to appendix
Signed-off-by: pants007 <qrw992@alumni.ku.dk>

--- a/report/sections/appendices.tex
+++ b/report/sections/appendices.tex
@@ -108,3 +108,8 @@ All our code can be found in the Jupyter notebook scripts \texttt{a.ipynb} and \
     \includegraphics[width=\textwidth]{figures/gp/mattern.png}
     \caption{Result of running the Bayesian optimization loop with a Matern32 kernel}
 \end{figure}
+
+\begin{figure}%[H]
+    \includegraphics[width=\textwidth]{figures/gp/sample_analysis.pdf}
+    \caption{Highest density intervals for our RBF kernel parameters, produced with Arviz}
+\end{figure}
